# moveit-pkgs

./: Dockerfile  README.md  TODO.md
moveit_controller_multidof/: CHANGELOG.rst  CMakeLists.txt  README.md  moveit_controller_multidof_plugin_description.xml  package.xml
moveit_controller_multidof/config/: moveit_multidof_controllers_template.yaml
moveit_controller_multidof/include/moveit_controller_multidof/: ForwardingControllerHandle.h  MultiDOFControllerManager.h  PathConverter.h  RobotTrajectoryExecutor.h  action_based_controller_handle.h
moveit_controller_multidof/src/: MultiDOFControllerManager.cpp  RobotTrajectoryExecutor.cpp
moveit_object_handling/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
moveit_object_handling/include/moveit_object_handling/: GraspedObjectHandler.h  MoveItCollisionMatrixManipulator.h  MoveItHelpers.h  ObjectMessageGenerator.h
moveit_object_handling/launch/: collision_object_generator.launch  gazebo_object_recognition.launch
moveit_object_handling/src/: GraspedObjectHandler.cpp  MoveItCollisionMatrixManipulator.cpp  MoveItHelpers.cpp  ObjectMessageGenerator.cpp  object_message_generator_node.cpp
moveit_planning_helper/: CHANGELOG.rst  CMakeLists.txt  package.xml
moveit_planning_helper/include/moveit_planning_helper/: MoveItPlanner.h
moveit_planning_helper/src/: MoveItPlanner.cpp
object_moveit/: CMakeLists.txt  README.md  package.xml
object_moveit/config/: CollisionObjectsGenerator.yaml
object_moveit/include/object_moveit/: GraspedObjectHandler.h  MoveItCollisionMatrixManipulator.h  MoveItHelpers.h  ObjectMessageGenerator.h
object_moveit/launch/: collision_object_generator.launch  gazebo_object_recognition.launch
object_moveit/src/: GraspedObjectHandler.cpp  MoveItCollisionMatrixManipulator.cpp  MoveItHelpers.cpp  ObjectMessageGenerator.cpp  object_message_generator_node.cpp
