<?xml version="1.0"?>
<package>
  <name>moveit_planning_helper</name>
  <version>1.0.0</version>
  <description>A test package to plan and execute a joint trajectory.
    This package is only in here for testing during development.
    At some stage, this will move to a new package with all
    motion-plan related functionalities, e.g. joint_trajectory_planning and
    joint_trajectory_execution.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="jennifer.e.buehler@gmail.com">Jennifer Buehler</maintainer>
  <author email="jennifer.e.buehler@gmail.com">Jennifer Buehler</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/moveit_planning_helper</url> -->

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>manipulation_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>convenience_ros_functions</build_depend>
  <build_depend>shape_tools</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>manipulation_msgs</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>convenience_ros_functions</run_depend>
  <run_depend>shape_tools</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
