<?xml version="1.0"?>
<package>
  <name>object_moveit</name>
  <version>0.0.0</version>
  <description>
    Package which helps generate the MoveIt! moveit_msgs/CollisionObject
    messages for existing objects in the scene, described by object_msgs/Object.
    Also provides helper classes for MoveIt! in relation to objects.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <maintainer email="jennifer.e.buehler@gmail.com">Jennifer Buehler</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/object_moveit</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <build_depend>message_generation</build_depend> 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>object_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>shape_tools</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>convenience_ros_functions</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>object_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>shape_tools</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>convenience_ros_functions</run_depend>
  
  <!-- needed for the tutorial, launch file object_moveit/gazebo_object_recognition.launch -->
  <run_depend>gazebo_test_tools</run_depend>
  <run_depend>gazebo_state_plugins</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
